# FamilyHub

./: .easignore  .env  .env.example  .gitignore  AGENTS.md  App.tsx  CLAUDE.md  README.md  app.config.ts  app.json  eas.json  eslint.config.js  metro.config.js  package-lock.json  package.json
_bmad-output/brainstorming/: brainstorming-session-2026-03-22-1830.md
_bmad-output/implementation-artifacts/: 0-1-project-setup-and-build-configuration.md  0-2-supabase-schema-and-migrations-foundation.md  0-3-repository-pattern-and-app-shell.md  0-4-powersync-offline-sync-foundation.md  (+74 more)
alexa/: .~lock.README.md#  README.md  interaction-model.json  signature-verification-backlog.md  skill-manifest.json
components/: Button.tsx  Card.tsx  Input.tsx  LoadingSpinner.tsx  index.ts
data/: SQLiteService.ts
docs/: keyboard-avoidance.md
harness/: .env.example  Containerfile  config.py  dependencies.py  main.py  pyproject.toml
harness/models/: events.py  requests.py  responses.py
harness/routers/: auth.py  health.py  session.py
harness/services/: fluent_loader.py  session_manager.py  sse_streamer.py  user_provisioner.py
harness/tests/: conftest.py  test_auth_provisioning.py  test_sse_streaming.py
models/: Family.ts  Grocery.ts  Note.ts  Task.ts  User.ts  index.ts
navigation/: AppNavigator.tsx
repositories/: BaseRepository.ts  GroceryRepository.ts  NoteRepository.ts  TaskRepository.ts
services/: AuthService.ts  firebase.ts
supabase/: config.toml  seed.sql
tmp/: .~lock.environment-setup-guide.md#  environment-setup-guide.md  prod-seed.sql  seed.sql
(+377 files in other folders)
